[gd_scene load_steps=16 format=3 uid="uid://dlgxj4vl8oqna"]

[ext_resource type="Script" path="res://Script/Equipment/Throw/Decoy.gd" id="1_k3sly"]
[ext_resource type="Texture2D" uid="uid://bgi2i2qfk283x" path="res://Asset/Weapon/Nade_Trigger.png" id="2_ja4xs"]
[ext_resource type="Texture2D" uid="uid://btwhw20sq7ckb" path="res://Asset/Weapon/Nade.png" id="3_jujoo"]
[ext_resource type="PackedScene" uid="uid://b62oc04ai6iwg" path="res://Screen/Asset/Function/Trail.tscn" id="4_rk07o"]
[ext_resource type="AudioStream" uid="uid://dmakqmv8wup0d" path="res://Asset/Weapon/Sound/Pistol_shoot.mp3" id="5_b58et"]
[ext_resource type="Texture2D" uid="uid://0ec7pv1cihxj" path="res://Asset/Weapon/Light.png" id="6_5f8tk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pp3aa"]
bounce = 0.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4tpy7"]
height = 32.0

[sub_resource type="Curve" id="Curve_7j5je"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_l5x2q"]
offsets = PackedFloat32Array(0, 0.684713, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0.313726, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_b0p3h"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_udawb"]
colors = PackedColorArray(0.5, 0.5, 0.5, 0.392157, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_miaht"]
resource_name = "fire"
length = 0.200003
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash/PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_rpt6l"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash/PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yyu33"]
_data = {
"fire": SubResource("Animation_miaht"),
"idle": SubResource("Animation_rpt6l")
}

[node name="Decoy" type="RigidBody2D"]
collision_layer = 0
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_pp3aa")
max_contacts_reported = 600
contact_monitor = true
script = ExtResource("1_k3sly")

[node name="NadeTrigger" type="Sprite2D" parent="."]
texture = ExtResource("2_ja4xs")
hframes = 2

[node name="Delay" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_jujoo")
hframes = 4
vframes = 2
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4tpy7")

[node name="Trail" parent="." instance=ExtResource("4_rk07o")]
width = 20.0
default_color = Color(0.7, 0.7, 0.7, 1)
lenght = 20

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_b58et")
max_distance = 10000.0
max_polyphony = 30
bus = &"Sound"

[node name="Flash" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(0, -20)
rotation = -1.5708
emitting = false
amount = 20
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_7j5je")
color_ramp = SubResource("Gradient_l5x2q")

[node name="Flash2" type="CPUParticles2D" parent="Flash"]
show_behind_parent = true
emitting = false
amount = 20
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = true
spread = 120.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_7j5je")
color_ramp = SubResource("Gradient_l5x2q")

[node name="PointLight2D" type="PointLight2D" parent="Flash"]
scale = Vector2(1e-05, 1e-05)
range_layer_max = 5
texture = ExtResource("6_5f8tk")

[node name="Gas" type="CPUParticles2D" parent="."]
z_index = 1
position = Vector2(0, -20)
rotation = -1.5708
emitting = false
amount = 100
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
spread = 120.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_b0p3h")
color_ramp = SubResource("Gradient_udawb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yyu33")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
